# stock-agent

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  skills-lock.json
.agents/skills/ollama-api-rest/: SKILL.md
.agents/skills/ollama-structured-output/: SKILL.md
.agents/skills/ollama-web-search/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request.md
.github/workflows/: ci.yml
docs/: architecture.md  arquitectura.md  rust_explanation.md  testing.md
migrations/: 0001_initial.sql
src/: events.rs  main.rs  market_data.rs  models.rs  ollama.rs  orchestrator.rs  storage.rs  test_support.rs  ui.rs
src/agents/: formatter.rs  informer.rs  investigation.rs  mod.rs  profile.rs  router.rs
